# shops_dataset

./: .gitignore  CMakeLists.txt  a.out  category.csv  lab1_analysis.py  lab_report_description.md  start_1_lab.sh  start_2_lab.sh  stores.csv
src/: dataset_anonim.cpp  dataset_anonim.hpp  dataset_gen.cpp  dataset_gen.hpp  main_anonym.cpp  main_window_anonym.cpp  main_window_anonym.hpp
src/assets/: brands_country.csv
